# fastapi-template

./: .gitignore  README.md  application.yaml  fastapicf.py  pyproject.toml
docs/: index.md
docs/config/: application.md
resources/template/: index.html  register.html  result.html
src/: main.py
src/controller/: router.py
src/controller/api/: base.py  login.py  retis_test.py  test.py
src/controller/views/: base.py  biz.py  home.py  test.py
src/core/: AppConfig.py  application_config.py  events.py  logger.py
src/database/: dbconfig.py  mysqldb.py  redisdb.py
src/enums/: ExcepitonEnums.py  StateEnums.py
src/middleware/: fastapi_middleware.py
src/model/: admin.py
src/router/: api_router.py  router.py  views_router.py
src/util/: dict_util.py  path_util.py  random_util.py
src/vo/: response.py
