[tool.poetry]
name = "docs-api"
version = "0.1.0"
description = ""
authors = ["oliver <lifefossil@outlook.com>"]

packages =[
    {include="src", from="."}
]

[tool.poetry.scripts]
dev = "src.main:start"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
aioredis = "^2.0.1"
Jinja2 = "^3.1.2"
itsdangerous = "^2.1.2"
tortoise-orm = {extras = ["asyncmy"], version = "^0.19.1"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
